k8s/gke/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default
spec:
  podSelector: {}
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-ingress
spec:
  podSelector: 
    matchLabels:
      app: postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: conversations
      ports:
      - protocol: TCP
        port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dynamodb-ingress
spec:
  podSelector: 
    matchLabels:
      app: dynamodb
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: dispatcher
      ports:
      - protocol: TCP
        port: 8000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: broker-ingress
spec:
  podSelector: 
    matchLabels:
      app: broker
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: conversations
      ports:
      - protocol: TCP
        port: 5672
    - from:
      - podSelector:
          matchLabels:
            app: dispatcher
      ports:
      - protocol: TCP
        port: 5672
    - from:
      - podSelector:
          matchLabels:
            app: chat
      ports:
      - protocol: TCP
        port: 5672
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: chat-ingress
spec:
  podSelector: 
    matchLabels:
      app: chat
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
      ports:
      - protocol: TCP
        port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: conversations-ingress
spec:
  podSelector: 
    matchLabels:
      app: conversations
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
      ports:
      - protocol: TCP
        port: 8080
    - from:
        - podSelector:
            matchLabels:
              app: dispatcher
      ports:
      - protocol: TCP
        port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dispatcher-ingress
spec:
  podSelector: 
    matchLabels:
      app: dispatcher
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: conversations
      ports:
      - protocol: TCP
        port: 8080
